--- a/video-animation.html
+++ b/video-animation.html
@@ -77,7 +77,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Our Work</a>
+                <a class="nav-link" href="our-work.html">Our Work</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
