--- a/web-design-&-development.html
+++ b/web-design-&-development.html
@@ -77,7 +77,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Our Work</a>
+                <a class="nav-link" href="our-work.html">Our Work</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
@@ -1053,7 +1053,7 @@
                       </div>
                       <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                           <div class="img-wrapper">
-                              <img src="/assets/images/case-study/government-cover-image.webp" data-src="/assets/images/case-study/government-cover-image.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                              <img src="/assets/images/case-study/ecommerce.png" data-src="/assets/images/case-study/ecommerce.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                           </div>
                       </div>
                       <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -1075,13 +1075,13 @@
                               <div class="generic-panel">
                                   <div class="generic-panel__head generic-heading">
                                       <div class="generic-heading__small-heading generic-heading__small-heading--left-icon text-capitalize animate fadein-Up">
-                                          <a href="#" bis_skin_checked="1">
+                                          <a href="case-study-ecommerce.html" bis_skin_checked="1">
                                               <span><strong>See Case Studies</strong></span>
                                           </a>
                                       </div>
                                   </div>
                               </div>
-                              <div class="feature-list animate fadein-Up">
+                              <!-- <div class="feature-list animate fadein-Up">
                                   <ul>
                                       <li>
                                           <a href="#">
@@ -1105,7 +1105,7 @@
                                           </a>
                                       </li>
                                   </ul>
-                              </div>
+                              </div> -->
                           </div>
                       </div>
                   </div>
@@ -1138,7 +1138,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="/assets/images/case-study/government-cover-image.webp" data-src="/assets/images/case-study/government-cover-image.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="/assets/images/case-study/fitness.png" data-src="/assets/images/case-study/fitness.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -1160,13 +1160,13 @@
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
                                     <div class="generic-heading__small-heading generic-heading__small-heading--left-icon text-capitalize animate fadein-Up">
-                                        <a href="#" bis_skin_checked="1">
+                                        <a href="case-study-ecommerce.html" bis_skin_checked="1">
                                             <span><strong>See Case Studies</strong></span>
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="feature-list animate fadein-Up">
+                            <!-- <div class="feature-list animate fadein-Up">
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -1190,7 +1190,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -1223,7 +1223,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="/assets/images/case-study/government-cover-image.webp" data-src="/assets/images/case-study/government-cover-image.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="/assets/images/case-study/real-state.png" data-src="/assets/images/case-study/real-state.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -1245,13 +1245,13 @@
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
                                     <div class="generic-heading__small-heading generic-heading__small-heading--left-icon text-capitalize animate fadein-Up">
-                                        <a href="#" bis_skin_checked="1">
+                                        <a href="case-study-ecommerce.html" bis_skin_checked="1">
                                             <span><strong>See Case Studies</strong></span>
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="feature-list animate fadein-Up">
+                            <!-- <div class="feature-list animate fadein-Up">
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -1275,7 +1275,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -1308,7 +1308,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="/assets/images/case-study/government-cover-image.webp" data-src="/assets/images/case-study/government-cover-image.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="/assets/images/case-study/fintech.webp" data-src="/assets/images/case-study/fintech.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -1330,13 +1330,13 @@
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
                                     <div class="generic-heading__small-heading generic-heading__small-heading--left-icon text-capitalize animate fadein-Up">
-                                        <a href="#" bis_skin_checked="1">
+                                        <a href="case-study-ecommerce.html" bis_skin_checked="1">
                                             <span><strong>See Case Studies</strong></span>
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="feature-list animate fadein-Up">
+                            <!-- <div class="feature-list animate fadein-Up">
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -1360,7 +1360,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -1393,7 +1393,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="/assets/images/case-study/government-cover-image.webp" data-src="/assets/images/case-study/government-cover-image.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="/assets/images/case-study/restaurent.webp" data-src="/assets/images/case-study/restaurent.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -1415,13 +1415,13 @@
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
                                     <div class="generic-heading__small-heading generic-heading__small-heading--left-icon text-capitalize animate fadein-Up">
-                                        <a href="#" bis_skin_checked="1">
+                                        <a href="case-study-ecommerce.html" bis_skin_checked="1">
                                             <span><strong>See Case Studies</strong></span>
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="feature-list animate fadein-Up">
+                            <!-- <div class="feature-list animate fadein-Up">
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -1445,7 +1445,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -1478,7 +1478,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="/assets/images/case-study/government-cover-image.webp" data-src="/assets/images/case-study/government-cover-image.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="/assets/images/case-study/constructiom.jpg" data-src="/assets/images/case-study/constructiom.jpg" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -1500,13 +1500,13 @@
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
                                     <div class="generic-heading__small-heading generic-heading__small-heading--left-icon text-capitalize animate fadein-Up">
-                                        <a href="#" bis_skin_checked="1">
+                                        <a href="case-study-ecommerce.html" bis_skin_checked="1">
                                             <span><strong>See Case Studies</strong></span>
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="feature-list animate fadein-Up">
+                            <!-- <div class="feature-list animate fadein-Up">
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -1530,7 +1530,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
